istio api/shopapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopapi-service
  labels:
    app: aspnet3core
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: aspnet3core
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopapi-deployment
  labels:
    app: aspnet3core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aspnet3core
  template:
    metadata:
      labels:
        app: aspnet3core
        environment: development
    spec:
      containers:
        - name: aspnet3
          image: deathstroke45/shoppingapi:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
